feat: add health api
